<resources>
    <string name="app_name">JudoKit</string>
    <string name="title_activity_demo_feature_list">Judo Examples</string>
    <string name="feature_title_payment">Pay with card</string>
    <string name="feature_subtitle_payment">by entering card details</string>
    <string name="feature_title_preauth">Pre-auth with card</string>
    <string name="feature_subtitle_preauth">pre-auth by entering card details</string>
    <string name="feature_title_save_card">Save card</string>
    <string name="feature_subtitle_save_card">to be stored for future transactions</string>
    <string name="feature_title_check_card">Check card</string>
    <string name="feature_subtitle_check_card">to validate a card</string>
    <string name="feature_title_google_pay_payment">Google Pay payment</string>
    <string name="feature_subtitle_google_pay_payment">with a wallet card</string>
    <string name="feature_title_google_pay_preauth">Google Pay pre-auth</string>
    <string name="feature_subtitle_google_pay_preauth">pre-auth with a wallet card</string>
    <string name="feature_title_payment_methods">Payment methods</string>
    <string name="feature_subtitle_payment_methods">with default payment methods</string>
    <string name="feature_title_preauth_payment_methods">Pre-auth payment methods</string>
    <string name="feature_subtitle_preauth_payment_methods">with default pre-auth payment methods</string>
    <string name="feature_title_server_to_server_payment_methods">Server-to-Server payment methods</string>
    <string name="feature_subtitle_server_to_server_payment_methods">with default Server-to-Server payment methods</string>
    <string name="feature_title_get_transaction_details">Get transaction details</string>
    <string name="feature_subtitle_get_transaction_details">Get transaction for receipt ID</string>
    <string name="title_settings">Settings</string>
    <string name="api_header">API Configurations</string>
    <string name="network_timeouts_header">Network timeouts (seconds)</string>
    <string name="amount_header">Amount</string>
    <string name="address_header">Address</string>
    <string name="others_header">Others</string>
    <string name="token_payments">Token payments</string>
    <string name="sdk_info_header">SDK information</string>
    <string name="is_sandboxed_title">Sandboxed</string>
    <string name="is_sandboxed_summary">Use Judopay API sandbox environment</string>
    <string name="should_use_fabrick_ds_cert_title">Use Fabrick DS cert</string>
    <string name="should_use_fabrick_ds_cert_summary">Use Fabrick DS cert in 3DS SDK when targeting sandbox</string>
    <string name="judo_id_title">Judo ID</string>
    <string name="judo_id_summary">Your Judo ID</string>
    <string name="token_title">Token</string>
    <string name="token_summary">Your API authorization token</string>
    <string name="secret_title">Secret</string>
    <string name="secret_summary">Your API authorization secret</string>
    <string name="connect_timeout_title">Connect timeout</string>
    <string name="connect_timeout_summary">Sets the default connect timeout for new connections. Must be in a range between 5 and 30</string>
    <string name="read_timeout_title">Read timeout</string>
    <string name="read_timeout_summary">Sets the default read timeout for new connections. Must be in a range between 180 and 300</string>
    <string name="write_timeout_title">Write timeout</string>
    <string name="write_timeout_summary">Sets the default write timeout for new connections. Must be in a range between 30 and 120</string>
    <string name="payment_session_title">Payment session</string>
    <string name="payment_session_summary">Your API authorization payment session</string>
    <string name="is_payment_session_enabled_title">Enable payment session authorization</string>
    <string name="is_payment_session_enabled_summary">Turn on to set payment session and custom payment reference</string>
    <string name="payment_reference_title">Payment reference</string>
    <string name="payment_reference_summary">Your custom payment reference</string>
    <string name="should_display_amount_title">Display amount label</string>
    <string name="should_display_amount_summary">Turn off to hide amount label in the payment methods screen.</string>
    <string name="amount_title">Amount</string>
    <string name="amount_summary">Your amount</string>
    <string name="is_address_enabled_title">Enable card address</string>
    <string name="is_address_enabled_summary">Turn on to set card address details</string>
    <string name="address_line_1_title">Line 1</string>
    <string name="address_line_1_summary">Sets address line 1</string>
    <string name="address_line_2_title">Line 2</string>
    <string name="address_line_2_summary">Sets address line 2</string>
    <string name="address_line_3_title">Line 3</string>
    <string name="address_line_3_summary">Sets address line 3</string>
    <string name="address_town_title">Town</string>
    <string name="address_town_summary">Sets address town</string>
    <string name="address_post_code_title">Post code</string>
    <string name="address_post_code_summary">Sets address post code</string>
    <string name="address_billing_country_title">Billing country</string>
    <string name="address_billing_country_summary">Sets address billing country</string>
    <string name="currency_title">Currency</string>
    <string name="currency_summary">Your amount currency</string>
    <string name="card_networks_title">Supported card networks</string>
    <string name="card_networks_summary">Card networks you want to support</string>
    <string name="payment_methods_title">Payment methods</string>
    <string name="payment_methods_summary">Payment methods you want to support</string>
    <string name="dialog_error_title">Error</string>
    <string name="dialog_success_title">Success</string>
    <string name="dialog_button_ok">Ok</string>
    <string name="primary_account_details_header">Primary account details</string>
    <string name="primary_account_details_summary">MCC 6012 fields</string>
    <string name="is_primary_account_details_enabled_title">Enable primary account details</string>
    <string name="is_primary_account_details_enabled_summary">Turn on to attach primary account details to the request body.</string>
    <string name="primary_account_name_title">Name</string>
    <string name="primary_account_name_summary">Sets name</string>
    <string name="primary_account_account_number_title">Account number</string>
    <string name="primary_account_account_number_summary">Sets account number</string>
    <string name="primary_account_date_of_birth_title">Date of birth</string>
    <string name="primary_account_date_of_birth_summary">Sets date of birth</string>
    <string name="primary_account_post_code_title">Post code</string>
    <string name="primary_account_post_code_summary">Sets postal code</string>
    <string name="google_pay_header">Google Pay Settings</string>
    <string name="google_pay_configuration_title">Google Pay</string>
    <string name="google_pay_settings_summary">Environment, transaction info, and MIT configuration</string>
    <string name="google_pay_general_header">General</string>
    <string name="google_pay_mit_header">Merchant initiated transactions</string>
    <string name="google_pay_is_production_title">Production environment</string>
    <string name="google_pay_is_production_summary">Use Google Pay production environment.</string>
    <string name="google_pay_country_code_title">Country code</string>
    <string name="google_pay_country_code_summary">A country code in ISO 3166–1 alpha-2 format</string>
    <string name="google_pay_merchant_name_title">Merchant name</string>
    <string name="google_pay_merchant_name_summary">The Google Pay merchant name.</string>
    <string name="billing_address_title">Billing address</string>
    <string name="billing_address_summary">Billing address format required to complete the transaction.</string>
    <string name="shipping_address_title">Shipping address</string>
    <string name="shipping_address_summary">Turn on to request a full shipping address.</string>
    <string name="google_pay_shipping_address_allowed_countries_title">Shipping address allowed countries</string>
    <string name="google_pay_shipping_address_allowed_countries_summary">Comma separated ISO 3166-1 alpha-2 country code values of the countries where shipping is allowed.</string>
    <string name="shipping_address_phone_number_title">Shipping address phone number</string>
    <string name="shipping_address_phone_number_summary">Turn on to request a shipping address phone number.</string>
    <string name="billing_address_phone_number_title">Billing address phone number</string>
    <string name="billing_address_phone_number_summary">Turn on to request a billing address phone number.</string>
    <string name="email_address_title">Email address</string>
    <string name="email_address_summary">Turn on to request a email address.</string>
    <string name="google_pay_allow_prepaid_cards_title">Allow Prepaid Cards</string>
    <string name="google_pay_allow_prepaid_cards_summary">Set to false if you don\'t support prepaid cards.</string>
    <string name="google_pay_allow_credit_cards_title">Allow Credit Cards</string>
    <string name="google_pay_allow_credit_cards_summary">Set to false if you don\'t support credit cards.</string>
    <string name="google_pay_transaction_id_title">Transaction ID</string>
    <string name="google_pay_transaction_id_summary">A unique ID that identifies a transaction attempt.</string>
    <string name="google_pay_total_price_status_title">Total price status</string>
    <string name="google_pay_total_price_status_summary">The status of the total price used</string>
    <string name="google_pay_total_price_label_title">Total price label</string>
    <string name="avs_title">Address Verification Service</string>
    <string name="avs_summary">Turn on to enable Address Verification Service.</string>
    <string name="security_code_title">Security code</string>
    <string name="security_code_summary">Turn on to enable security code verification in the payment methods screen.</string>
    <string name="should_payment_button_display_amount_title">Display amount on button</string>
    <string name="should_payment_button_display_amount_summary">Turn on to show amount on the Pay button.</string>
    <string name="is_initial_recurring_payment_title">Initial recurring payment</string>
    <string name="is_initial_recurring_payment_summary">Turn on to set initialRecurringPayment flag to true.</string>
    <string name="sdk_version_title">SDK version</string>
    <string name="judo_api_version_title">Judo API version</string>
    <string name="create_card_token">Create card token</string>
    <string name="token_payment">Token payment</string>
    <string name="preauth_token_payment">PreAuth token payment</string>
    <string name="token_payment_description">To make a token or preauth token payment, first you have to create a card token</string>
    <string name="three_ds2_header">3DS 2.0</string>
    <string name="is_3ds2_enabled_title">Enable billing information screen</string>
    <string name="is_3ds2_enabled_summary">Asks user for billing information</string>
    <string name="challenge_request_indicator_summary">Select challenge request indicator</string>
    <string name="challenge_request_indicator_title">Challenge request indicator</string>
    <string name="sca_exemption_summary">Select SCA exemption</string>
    <string name="sca_exemption_title">SCA exemption</string>
    <string name="three_ds2_max_timeout_summary">Max timeout for 3DS 2.0 transaction</string>
    <string name="three_ds2_max_timeout_title">3DS 2.0 max timeout</string>
</resources>