<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/api_header">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="is_sandboxed"
            app:summary="@string/is_sandboxed_summary"
            app:title="@string/is_sandboxed_title" />

        <EditTextPreference
            android:defaultValue="false"
            app:defaultValue="@string/default_judo_id"
            app:iconSpaceReserved="false"
            app:key="judo_id"
            app:summary="@string/judo_id_summary"
            app:title="@string/judo_id_title" />

        <EditTextPreference
            app:defaultValue="@string/default_token"
            app:iconSpaceReserved="false"
            app:key="token"
            app:summary="@string/token_summary"
            app:title="@string/token_title" />

        <EditTextPreference
            app:defaultValue="@string/default_secret"
            app:iconSpaceReserved="false"
            app:key="secret"
            app:summary="@string/secret_summary"
            app:title="@string/secret_title" />

        <SwitchPreference
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="is_payment_session_enabled"
            app:summary="@string/is_payment_session_enabled_summary"
            app:title="@string/is_payment_session_enabled_title" />

        <EditTextPreference
            app:dependency="is_payment_session_enabled"
            app:iconSpaceReserved="false"
            app:key="payment_session"
            app:summary="@string/payment_session_summary"
            app:title="@string/payment_session_title" />

        <EditTextPreference
            app:dependency="is_payment_session_enabled"
            app:iconSpaceReserved="false"
            app:key="payment_reference"
            app:summary="@string/payment_reference_summary"
            app:title="@string/payment_reference_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/three_ds2_header">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="should_ask_for_billing_information"
            app:summary="@string/is_3ds2_enabled_summary"
            app:title="@string/is_3ds2_enabled_title" />

        <ListPreference
            app:defaultValue="NO_PREFERENCE"
            app:entries="@array/three_ds_two_challenge_request_indicator_entries"
            app:entryValues="@array/three_ds_two_challenge_request_indicator_values"
            app:iconSpaceReserved="false"
            app:key="challengeRequestIndicator"
            app:summary="@string/challenge_request_indicator_summary"
            app:title="@string/challenge_request_indicator_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="LOW_VALUE"
            app:entries="@array/three_ds_two_sca_exemption_entries"
            app:entryValues="@array/three_ds_two_sca_exemption_values"
            app:iconSpaceReserved="false"
            app:key="scaExemption"
            app:summary="@string/sca_exemption_summary"
            app:title="@string/sca_exemption_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="30"
            app:iconSpaceReserved="false"
            app:key="threeDSTwoMaxTimeout"
            app:summary="@string/three_ds2_max_timeout_summary"
            app:title="@string/three_ds2_max_timeout_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:inputType="number"
            app:iconSpaceReserved="false"
            app:key="connect_timeout"
            app:summary="@string/connect_timeout_summary"
            app:title="@string/connect_timeout_title" />

        <EditTextPreference
            app:iconSpaceReserved="false"
            app:key="read_timeout"
            app:summary="@string/read_timeout_summary"
            app:title="@string/read_timeout_title" />

        <EditTextPreference
            app:iconSpaceReserved="false"
            app:key="write_timeout"
            app:summary="@string/write_timeout_summary"
            app:title="@string/write_timeout_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/amount_header">

        <EditTextPreference
            app:defaultValue="0.15"
            app:iconSpaceReserved="false"
            app:key="amount"
            app:summary="@string/amount_summary"
            app:title="@string/amount_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="GBP"
            app:entries="@array/currency_entries"
            app:entryValues="@array/currency_values"
            app:iconSpaceReserved="false"
            app:key="currency"
            app:summary="@string/currency_summary"
            app:title="@string/currency_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/address_header">

        <SwitchPreference
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="is_address_enabled"
            app:summary="@string/is_address_enabled_summary"
            app:title="@string/is_address_enabled_title" />

        <EditTextPreference
            app:defaultValue="My house"
            app:dependency="is_address_enabled"
            app:iconSpaceReserved="false"
            app:key="address_line_1"
            app:summary="@string/address_line_1_summary"
            app:title="@string/address_line_1_title" />

        <EditTextPreference
            app:defaultValue="My street"
            app:dependency="is_address_enabled"
            app:iconSpaceReserved="false"
            app:key="address_line_2"
            app:summary="@string/address_line_2_summary"
            app:title="@string/address_line_2_title" />

        <EditTextPreference
            app:defaultValue="My area"
            app:dependency="is_address_enabled"
            app:iconSpaceReserved="false"
            app:key="address_line_3"
            app:summary="@string/address_line_3_summary"
            app:title="@string/address_line_3_title" />

        <EditTextPreference
            app:defaultValue="My town"
            app:dependency="is_address_enabled"
            app:iconSpaceReserved="false"
            app:key="address_town"
            app:summary="@string/address_town_summary"
            app:title="@string/address_town_title" />

        <EditTextPreference
            app:defaultValue="TR14 8PA"
            app:dependency="is_address_enabled"
            app:iconSpaceReserved="false"
            app:key="address_post_code"
            app:summary="@string/address_post_code_summary"
            app:title="@string/address_post_code_title" />

        <EditTextPreference
            app:defaultValue="826"
            android:inputType="number"
            app:dependency="is_address_enabled"
            app:iconSpaceReserved="false"
            app:key="address_billing_country"
            app:summary="@string/address_billing_country_summary"
            app:title="@string/address_billing_country_title" />

        <EditTextPreference
            app:defaultValue="826"
            app:dependency="is_address_enabled"
            app:iconSpaceReserved="false"
            app:key="address_country_code"
            app:summary="Your country code"
            app:title="Country code"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="44"
            app:dependency="is_address_enabled"
            app:iconSpaceReserved="false"
            app:key="phone_country_code"
            app:summary="Your phone country code"
            app:title="Phone country code"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="0799999999"
            app:dependency="is_address_enabled"
            app:iconSpaceReserved="false"
            app:key="mobile_number"
            app:summary="Your mobile number"
            app:title="Mobile number"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="email@address.com"
            app:dependency="is_address_enabled"
            app:iconSpaceReserved="false"
            app:key="email_address"
            app:summary="Your email address"
            app:title="Email address"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/primary_account_details_header"
        android:summary="@string/primary_account_details_summary">

        <SwitchPreference
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="is_primary_account_details_enabled"
            app:title="@string/is_primary_account_details_enabled_title"
            app:summary="@string/is_primary_account_details_enabled_summary" />

        <EditTextPreference
            app:defaultValue="test-account-name"
            app:dependency="is_primary_account_details_enabled"
            app:iconSpaceReserved="false"
            app:key="primary_account_name"
            app:title="@string/primary_account_name_title"
            app:summary="@string/primary_account_name_summary" />

        <EditTextPreference
            app:defaultValue="4015434234"
            app:dependency="is_primary_account_details_enabled"
            app:iconSpaceReserved="false"
            app:key="primary_account_account_number"
            app:title="@string/primary_account_account_number_title"
            app:summary="@string/primary_account_account_number_summary" />

        <EditTextPreference
            app:defaultValue="1970-10-11"
            app:dependency="is_primary_account_details_enabled"
            app:iconSpaceReserved="false"
            app:key="primary_account_date_of_birth"
            app:title="@string/primary_account_date_of_birth_title"
            app:summary="@string/primary_account_date_of_birth_summary" />

        <EditTextPreference
            app:defaultValue="EC2A"
            app:dependency="is_primary_account_details_enabled"
            app:iconSpaceReserved="false"
            app:key="primary_account_post_code"
            app:title="@string/primary_account_post_code_title"
            app:summary="@string/primary_account_post_code_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/google_pay_header">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="is_google_pay_production_environment"
            app:summary="@string/google_pay_is_production_summary"
            app:title="@string/google_pay_is_production_title" />

        <EditTextPreference
            app:defaultValue="GB"
            app:iconSpaceReserved="false"
            app:key="google_pay_country_code"
            app:summary="@string/google_pay_country_code_summary"
            app:title="@string/google_pay_country_code_title" />

        <ListPreference
            app:defaultValue="NONE"
            app:entries="@array/google_pay_address_entries"
            app:entryValues="@array/google_pay_address_values"
            app:iconSpaceReserved="false"
            app:key="billing_address"
            app:summary="@string/billing_address_summary"
            app:title="@string/billing_address_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="is_billing_address_phone_number_required"
            app:summary="@string/billing_address_phone_number_summary"
            app:title="@string/billing_address_phone_number_title" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="is_shipping_address_required"
            app:summary="@string/shipping_address_summary"
            app:title="@string/shipping_address_title" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="is_shipping_address_phone_number_required"
            app:summary="@string/shipping_address_phone_number_summary"
            app:title="@string/shipping_address_phone_number_title" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="is_email_address_required"
            app:summary="@string/email_address_summary"
            app:title="@string/email_address_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/others_header">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="is_avs_enabled"
            app:summary="@string/avs_summary"
            app:title="@string/avs_title" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="should_payment_methods_verify_security_code"
            app:summary="@string/security_code_summary"
            app:title="@string/security_code_title" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="should_display_amount"
            app:summary="@string/should_display_amount_summary"
            app:title="@string/should_display_amount_title" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="should_payment_button_display_amount"
            app:summary="@string/should_payment_button_display_amount_summary"
            app:title="@string/should_payment_button_display_amount_title" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="is_initial_recurring_payment"
            app:summary="@string/is_initial_recurring_payment_summary"
            app:title="@string/is_initial_recurring_payment_title" />

        <MultiSelectListPreference
            app:defaultValue="@array/default_card_networks_values"
            app:entries="@array/card_networks_entries"
            app:entryValues="@array/card_networks_values"
            app:iconSpaceReserved="false"
            app:key="supported_networks"
            app:summary="@string/card_networks_summary"
            app:title="@string/card_networks_title"
            app:useSimpleSummaryProvider="true" />

        <MultiSelectListPreference
            app:defaultValue="@array/default_payment_methods_values"
            app:entries="@array/payment_methods_entries"
            app:entryValues="@array/payment_methods_values"
            app:iconSpaceReserved="false"
            app:key="payment_methods"
            app:summary="@string/payment_methods_summary"
            app:title="@string/payment_methods_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/sdk_info_header">

        <com.judokit.android.examples.settings.preferences.SDKInfoPreference
            app:key="sdk_version"
            app:enableCopying="true"
            app:iconSpaceReserved="false"
            app:title="@string/sdk_version_title"/>

        <com.judokit.android.examples.settings.preferences.SDKInfoPreference
            app:key="judo_api_version"
            app:enableCopying="true"
            app:iconSpaceReserved="false"
            app:title="@string/judo_api_version_title"/>

    </PreferenceCategory>

</PreferenceScreen>
